adds ability to compose/submit tweet, and displays the new tweet in the timeline

--- a/app/src/main/res/layout/activity_compose_tweet.xml
+++ b/app/src/main/res/layout/activity_compose_tweet.xml
@@ -37,14 +37,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:hint="@string/whats_happening"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/submit"
         android:id="@+id/bSubmit"
         android:layout_below="@+id/etBody"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="84dp" />
+        android:layout_marginTop="84dp"
+        android:onClick="onSubmitTweet"/>
 </RelativeLayout>
