--- a/app/src/main/res/layout/activity_compose_tweet.xml
+++ b/app/src/main/res/layout/activity_compose_tweet.xml
@@ -49,4 +49,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="84dp"
         android:onClick="onSubmitTweet"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/tvCharsRemaining"
+        android:layout_below="@+id/etBody"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
