characters remaining for tweet is displayed as negative and red when user goes over limit

--- a/app/src/main/res/layout/activity_compose_tweet.xml
+++ b/app/src/main/res/layout/activity_compose_tweet.xml
@@ -57,5 +57,6 @@
         android:id="@+id/tvCharsRemaining"
         android:layout_below="@+id/etBody"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="#000000"/>
 </RelativeLayout>
