--- a/app/src/main/res/layout/activity_compose_tweet.xml
+++ b/app/src/main/res/layout/activity_compose_tweet.xml
@@ -9,7 +9,8 @@
         android:id="@+id/ivProfilePicture"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginRight="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,7 +19,9 @@
         android:id="@+id/tvUserName"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivProfilePicture"
-        android:layout_toEndOf="@+id/ivProfilePicture" />
+        android:layout_toEndOf="@+id/ivProfilePicture"
+        android:layout_marginBottom="5dp"
+        android:textColor="#000000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,7 +30,8 @@
         android:id="@+id/tvScreenName"
         android:layout_below="@+id/tvUserName"
         android:layout_toRightOf="@+id/ivProfilePicture"
-        android:layout_toEndOf="@+id/ivProfilePicture" />
+        android:layout_toEndOf="@+id/ivProfilePicture"
+        android:textColor="#000000"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -38,7 +42,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:hint="@string/whats_happening"/>
+        android:hint="@string/whats_happening"
+        android:layout_marginTop="5dp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -58,5 +63,6 @@
         android:layout_below="@+id/etBody"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:padding="10dp" />
 </RelativeLayout>
