--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -19,7 +19,8 @@
         android:id="@+id/tvUserName"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:textColor="#000000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,7 +31,8 @@
         android:linksClickable="true"
         android:layout_toRightOf="@+id/ivProfileImage"
         android:layout_below="@+id/tvUserName"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:textColor="#000000"/>
 
     <TextView
         android:layout_width="wrap_content"
