--- a/app/src/main/res/layout/activity_compose_tweet.xml
+++ b/app/src/main/res/layout/activity_compose_tweet.xml
@@ -53,7 +53,9 @@
         android:layout_below="@+id/etBody"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="84dp"
-        android:onClick="onSubmitTweet"/>
+        android:onClick="onSubmitTweet"
+        android:background="@drawable/fancy_button"
+        android:textColor="#ffffff"/>
 
     <TextView
         android:layout_width="wrap_content"
