--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -3,6 +3,12 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.apps.mysimpletweets.activities.TimelineActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,4 +19,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
