--- a/app/src/main/res/layout/fragment_user_header.xml
+++ b/app/src/main/res/layout/fragment_user_header.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
+    android:layout_marginBottom="20dp"
     android:id="@+id/rlUserHeader">
 
     <ImageView
